--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     />
   </head>
   <body>
-    <div id="app" style="background-color: #09090b"></div>
+    <div id="root" style="background-color: #09090b"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
